<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/produit_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginVertical="@dimen/default_margin"
        android:hint="@string/produit_new_field_nom"
        app:boxBackgroundMode="filled"
        app:errorEnabled="true"
        app:helperText="@string/helper_field_required"
        app:hintAnimationEnabled="true"


        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:text="Northwood Cranberry Sauce" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/produit_categ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginVertical="@dimen/default_margin"
        android:hint="@string/produit_new_field_categ"
        app:boxBackgroundMode="filled"
        app:errorEnabled="true"
        app:helperText="@string/helper_field_required"
        app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            tools:ignore="TextContrastCheck"
            tools:text="Boissons" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/produit_qte"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginVertical="@dimen/default_margin"
            android:hint="@string/produit_new_field_qte"
            app:boxBackgroundMode="filled"
            app:errorEnabled="true"
            app:helperText="@string/helper_field_required"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/produit_prix"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                tools:ignore="TextContrastCheck"
                tools:text="150" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/produit_prix"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            android:layout_marginVertical="@dimen/default_margin"
            android:hint="@string/produit_new_field_prix"
            app:boxBackgroundMode="filled"
            app:endIconMode="none"
            app:errorEnabled="true"

            app:helperText="@string/helper_field_required"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/produit_qte"
            app:layout_constraintTop_toTopOf="parent"
            app:suffixText="$">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                tools:text="1" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>