<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="total" type="Double"/>
        <variable name="categ" type="Double"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProduitListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/insert_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorPressedHighlight"

        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_Total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/label_total_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/default_margin"
                android:text="@string/prompt_inv_total"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                android:textColor="?attr/colorOnSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_total_value"
                android:layout_width="@dimen/produits_item_prix_width"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/default_margin"
                currencyAmount="@{total}"
                tools:text="150.00 $"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@id/label_total_value"
                app:layout_constraintTop_toTopOf="parent"
                 />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_categ"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/view_Total"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_Total">

            <TextView
                android:id="@+id/label_categ_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@string/prompt_categ"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
                android:textColor="?attr/colorOnSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_categ_value"
                android:layout_width="@dimen/produits_item_prix_width"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                currencyAmount="@{categ}"
                tools:text="150.00 $"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle2"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                 />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/header"
        layout="@layout/produit_listview_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/insert_total" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:contentDescription="@string/mainactivity_fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:ignore="ImageContrastCheck" />




</androidx.constraintlayout.widget.ConstraintLayout>
</layout>